8269274: [lworld] Withfield instruction fails to verify when operand stack contains LPrimitiveClass;

Reviewed-by: fparain